2008-02-23  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/os2/gclient.c: Use the font palette dialog instead of the standard
	font selection dialog. Still switcheable via #define STANDARD_FONT_DIALOG.
	SF #1773922 OS/2 PM-Termial broken font selection by Franz Bakan.

	* config/makefile.cyg: Added GNUPLOT_PS_DIR and WIN_IPC.

	* config/makefile.dj2 config/makefile.os2: Added GNUPLOT_PS_DIR.

	* config/makefile.mgw: Added WIN_IPC.

	* config/config.nt config/makefile.nt: Moved GIF_ANIMATION.

2008-02-22  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pslatex.trm:  Include entry point PS_path in the terminal tables
	for epslatex, pslatex, and pstex.  This fixes a bug due to the code in
	color.c:draw_inside_color_smooth_box_postscript() not being able to sync
	with the code in the terminal driver.

2008-02-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (place_arrows3d): Save/restore the clipping area so
	that splot doesn't trash the current clipping state.  Bugfix.

	* src/graphics.c (boundary): Reset the default clipping area to the
	plot boundary at the start of every 'plot' command.  This should not
	be necessary, but it provides protection against a hypothetical instance
	of int_error() in the middle of a save/draw/restore sequence.

2008-02-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_timestamp): Do not spin on unrecognized option. Bugfix.

2008-02-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c (gd_strdup) src/set.c (set_decimalsign): Fix segfault due
	to trying to free a string returned by getenv().
	Bugfix.

2008-02-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (change_term):  Allow terminals with similar names to
	coexist (svg/svga/svgalib). Back-ported from 4.3.

2008-02-01  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/datafile.c (df_readbinary): Fix off-by-one error in the implicit
	"column 0" of non-matrix binary data files.
