@@ -1,5 +1,5 @@
 /*
- * $Id: graphics.h,v 1.34.2.1 2006/11/16 03:04:45 sfeam Exp $
+ * $Id: graphics.h,v 1.34.2.2 2008/02/28 22:58:25 sfeam Exp $
  */
 
 /* GNUPLOT - graphics.h */
@@ -100,8 +100,7 @@ extern double bar_size;
 
 void do_plot __PROTO((struct curve_points *, int));
 int label_width __PROTO((const char *, int *));
-void map_position __PROTO((struct position * pos, unsigned int *x,
-				  unsigned int *y, const char *what));
+void map_position __PROTO((struct position * pos, int *x, int *y, const char *what));
 void map_position_r __PROTO((struct position* pos, double* x, double* y,
 			     const char* what));
 #if defined(sun386) || defined(AMIGA_SC_6_1)
