@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: mouse.c,v 1.85.2.1 2007/02/10 00:13:23 mikulik Exp $"); }
+static char *RCSid() { return RCSid("$Id: mouse.c,v 1.85.2.2 2008/02/28 22:58:25 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - mouse.c */
@@ -2384,7 +2384,7 @@ nearest_label_tag(int xref, int yref, struct termentry *t)
     double min = -1;
     int min_tag = -1;
     double diff_squared;
-    unsigned int x, y;
+    int x, y;
     struct text_label *this_label;
     int xd;
     int yd;
@@ -2396,8 +2396,8 @@ nearest_label_tag(int xref, int yref, struct termentry *t)
 	    yd -= yref;
 	} else {
 	    map_position(&this_label->place, &x, &y, "label");
-	    xd = (int) x - (int) xref;
-	    yd = (int) y - (int) yref;
+	    xd = x - xref;
+	    yd = y - yref;
 	}
 	diff_squared = xd * xd + yd * yd;
 	if (-1 == min || min > diff_squared) {
